<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">博客集</string>
    <string name="action_search">搜索</string>
    <string name="action_plus">功能</string>
    <string name="action_album">我的相册</string>
    <string name="action_collection">我的收藏</string>
    <string name="action_card">我的银行卡</string>
    <string name="action_settings">设置</string>
    <string name="action_feed">意见反馈</string>
    <string name="plus_group_chat">发起群聊</string>
    <string name="plus_add_friend">添加朋友</string>
    <string name="plus_video_chat">视频聊天</string>
    <string name="plus_scan">扫一扫</string>
    <string name="plus_take_photo">拍照分享</string>
    <string name="about">About</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="btn_login">登录</string>
    <string name="progress_login">正在登录…</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="tip_please_input_password">请输入密码</string>
    
</resources>
